Added components, child component and styling

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,37 @@
     transform: rotate(360deg);
   }
 }
+
+.calculator {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10rem;
+}
+
+.result {
+  display: flex;
+  color: #fff;
+  justify-content: flex-end;
+  background-color: rgba(150, 150, 150);
+  width: 300px;
+  height: 50px;
+}
+
+.result p {
+  padding-right: 5px;
+}
+
+button {
+  width: 75px;
+  height: 50px;
+  border: 1px solid lightgrey;
+}
+
+.operator {
+  background-color: #ff8000;
+}
+
+.btn-zero {
+  width: 150px;
+}
