--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@
   margin: 10rem auto auto auto;
   flex-wrap: wrap;
   width: 300px;
+  box-shadow: 10px 10px 10px 5px rgba(0, 0, 0, 0.25);
 }
 
 .result {
@@ -54,10 +55,9 @@
   background-color: rgba(150, 150, 150);
   width: 300px;
   height: 50px;
-}
-
-.result p {
-  padding-right: 5px;
+  align-items: center;
+  padding-right: 0.5rem;
+  font-size: 24px;
 }
 
 button {
